--- a/src/styles/dialogs.scss
+++ b/src/styles/dialogs.scss
@@ -2,3 +2,8 @@
   @apply bg-white rounded-2xl p-8 w-full shadow-xl transform scale-95 transition-transform duration-200;
   width: 940px;
 }
+
+.entity-edit-form {
+  max-height: 500px;
+  overflow-y: scroll;
+}
