--- a/src/styles/layouts.scss
+++ b/src/styles/layouts.scss
@@ -44,7 +44,7 @@ a {
 /* Responsive adjustments */
 @media (max-width: 768px) {
   .header {
-    padding: 1rem;
+    // padding: 1rem;
   }
 
   .main-content {
