working on city about page WIP

--- a/src/styles/inputs.scss
+++ b/src/styles/inputs.scss
@@ -42,3 +42,13 @@
   @extend .input-description-group
 }
 
+.input-cities-content {
+  @extend .input-description-group
+}
+
+.input-cities-photos {
+  @extend .input-description-group
+}
+
+
+
