fixed signal bug

--- a/src/app/pages/city/city-about/city-about.component.html
+++ b/src/app/pages/city/city-about/city-about.component.html
@@ -4,7 +4,7 @@
 
     <!-- City Header -->
     <div class="city-header">
-      <h1>{{ $currentCity()()?.name || 'Loading...' }}</h1>
+      <h1>{{ $currentCity()?.name || 'Loading...' }}</h1>
     </div>
 
     <!-- Photo Gallery -->
