--- a/src/app/components/search-bar/search-bar.html
+++ b/src/app/components/search-bar/search-bar.html
@@ -60,19 +60,6 @@
       <div class="form-group button-group flex-shrink-0">
         <button type="button" (click)="onSearch()" class="search-button" [disabled]="$isSearching()">
           <!-- Show spinner when searching, search icon when not -->
-          <svg *ngIf="!$isSearching()" class="search-icon" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd" />
-          </svg>
-
-          <svg *ngIf="$isSearching()" class="search-icon animate-spin" fill="none" viewBox="0 0 24 24">
-            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-          </svg>
-
-          {{ $isSearching() ? 'Searching...' : 'Search' }}
-        </button>
-        <button type="button" (click)="onSearch()" class="search-button" [disabled]="$isSearching()">
-          <!-- Show spinner when searching, search icon when not -->
           <svg *ngIf="!$isSearching2()" class="search-icon" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd" />
           </svg>
@@ -82,9 +69,9 @@
             <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
           </svg>
 
-          {{ $isSearching2() ? 'Searching2...' : 'Search2' }}
+          {{ $isSearching2() ? 'Searching...' : 'Search' }}
         </button>
-        {{venueState.status$ | async}}
+        {{ venueState.status$ | async }}
       </div>
 
 
