added better scrolling; fixed search; fixed city browser

--- a/src/app/components/venue-list/venue-list.component.html
+++ b/src/app/components/venue-list/venue-list.component.html
@@ -4,9 +4,9 @@
        [scrollWindow]="true"
        (scrolled)="onScrollDown()">
 
-    <app-floating-toolbar [parent]="mapContainer">
-      <app-view-mode-buttons></app-view-mode-buttons>
-    </app-floating-toolbar>
+<!--    <app-floating-toolbar>-->
+<!--      <app-view-mode-buttons></app-view-mode-buttons>-->
+<!--    </app-floating-toolbar>-->
 
     <!--            <app-view-mode-buttons></app-view-mode-buttons>-->
 
