--- a/src/app/pages/city/city-about/city-about.component.scss
+++ b/src/app/pages/city/city-about/city-about.component.scss
@@ -145,7 +145,7 @@
   padding: 3rem;
   margin-bottom: 4rem;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  position: relative;
+  // position: relative;
 
   &::before {
     content: '';
